--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -934,6 +934,9 @@ body {
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%); }
 
+.slide-1 {
+  z-index: 4; }
+
 .nav label:nth-of-type(1):hover, #slide-id-1:checked ~ .nav label:nth-of-type(1) {
   background: darkblue;
   color: white;
@@ -970,6 +973,9 @@ body {
   -webkit-transform: translateX(-200%);
           transform: translateX(-200%); }
 
+.slide-2 {
+  z-index: 2; }
+
 .nav label:nth-of-type(2):hover, #slide-id-2:checked ~ .nav label:nth-of-type(2) {
   background: darkblue;
   color: white;
@@ -1005,6 +1011,9 @@ body {
 #slide-id-4:checked ~ .slide-3:not(.slide-4) {
   -webkit-transform: translateX(-200%);
           transform: translateX(-200%); }
+
+.slide-3 {
+  z-index: 6; }
 
 .nav label:nth-of-type(3):hover, #slide-id-3:checked ~ .nav label:nth-of-type(3) {
   background: darkblue;
